refracted code related to validation, logic enhancement